assets/css/style.css
/*Imported Fonts*/
@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Raleway:ital,wght@0,300;0,600;1,300;1,600&family=Taviraj:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');

/*Asterisk Element*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body  {
    background-color: #233142;
    color: #FACF5A;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /*General Font*/
    font-family: 'Raleway', sans-serif;
}

/*Header Element*/
header  {
    background-color: #19282F;
    color: #FF5956;
    padding: 0 1rem;
    position: fixed;
    z-index: 98;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

h1, h2, h3  {
    font-family: 'Taviraj', serif;
}

header a  {
    text-align: center;
    text-decoration: none;
    color: inherit;
}

i  {
    color: #FF5956;
}

/*Targets h1 size separately*/
#logo  {
    font-size: 1.8rem;
}

nav {
    position: absolute;
    z-index: 99;
    background-color: #19282F;
    color: #FACF5A;
    width: 100%;
    left: 0;
    display: none;
    top: 100%;
}

#menu {
    font-size: 1.1rem;
    letter-spacing: 4px;
    list-style-type: none;
    text-align: center;
}

#menu li  {
    border: 1.5px solid #3a3a3a;
    padding: 5px 0;
}

/* emphasises the active website in menu */
.active  {
    color: #FF5956;
    font-weight: bold;
}

/* nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-label {
    font-size: 2rem;
    padding: 5px 5px 0 0;
}
/*Main Content*/
main  {
    min-height: 100vh;
    margin-top: 40px;
}

#landscape  {
    height: 100vh;
    width: 100%;
    background: url("../images/torii_1920.jpg") no-repeat center center/cover;
}

#cover-text  {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj',serif;
    font-size: 1.2rem;
    width: 100%;
    position: absolute;
    bottom: 5rem;
    text-align: center;
}

#statement  {
    padding: 0.5rem 1rem;
}

#h-statement  {
    text-align: center;
}

#h-statement p {
    text-align: justify;
}

/* About Page */
#ronin {
    height: 100vh;
    width: 100%;
    background: url("../images/ronin_1920.jpg") no-repeat center center/cover;
}

#cover-text-a {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj', serif;
    font-size: 120%;
    width: 100%;
    position: absolute;
    bottom: 5rem;
    text-align: center;
    justify-content: center;
}

#mnemonics {
    padding: 0.5rem 1rem;
}

#m-introduction  {
    text-align: center;
}

#mnemonics p {
    text-align: justify;
}

#m-techniques h2,h3 {
    text-align: center;
}

#m-techniques h3 {
    padding-top: 1rem;
}

.m-summary p {
    padding: 1rem 1rem;
    text-align: justify;
}

#m-techniques img {
    width: 90vw;
    display: flex; /*Note: display:block should work here, but does not */
    margin: 0 auto; 
    padding: 1rem;
    border: 1rem inset #FACF5A;
}

/* Services Page */
#fox  {
    height: 100vh;
    width: 100%;
    background: url("../images/fox_1920.jpg") no-repeat center center/cover;
}

#cover-text-b {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj', serif;
    font-size: 140%;
    width: 100%;
    position: absolute;
    bottom: 5rem;
    text-align: center;
    justify-content: center;
}

#services img {
    width: 90vw;
    display: flex;/*Note: display:block should work here, but does not */
    margin: 0 auto;
    padding: 1rem;
    border: 1rem inset #FACF5A;
}

/* Request (Build a Gate) Page */
#mountain {
    height: 115vh; /*pushes the footer down to fit form */
    width: 100%;
    background: url("../images/mountain_1920.jpg") no-repeat center center/cover;
    padding: 20px 10% 0 10%;
    flex: 1 0 auto;
}

#user_request  {
    background-color: rgba(25, 40, 47, 0.6);
    padding: 20px;    
}

.text-line  {
    background: transparent;
    border: 1px inset #FACF5A;
    border-radius: 2px;
    width: 100%;
    padding: 0 5px;
    margin: 5px 0 20px 0;
}

::placeholder  {
    color: #fff;
    opacity: 1;
}

#user_request textarea  {
    background: transparent;
    color: #fff;
    width: 100%;
}

#request-type  {
    color:#fff;
}

.form-button  {
    margin-top: 30px;
    border-radius: 2px;
    padding: 15px 3px;
    color: #FF5956;
    background-color: #19282F;
}

/* Confirmation Webpage */
#r_gratitude  {
    background-color: rgba(25, 40, 47, 0.6);
    font-family: 'Taviraj', serif;
    font-size: 1.4rem;
    width: 100%;
    position: absolute;
    top: 5rem;
    text-align: center;
}

#r_gratitude_2 {
    background-color: rgba(25, 40, 47, 0.75);
    font-family: 'Taviraj', serif;
    font-size: 1rem;
    width: 100%;
    position: absolute;
    bottom: 5rem;
    text-align: center;
}

/*Footer*/
footer  {
    background-color: #19282F;
    font-family: 'Taviraj', sans-serif;
}

#social-media {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-media i  {
    font-size: 2rem;
    padding: 5%
}

/* Media query - Ordered from lowest to highest device width */

@media screen and (min-width: 768px)  {
    nav  {
        display: block;
        position: relative;
        width: fit-content;
        padding-right: 10px;
    }

    #menu {
    display: flex;
    }

    #menu > li {
    padding: 0 5px;
    }

    .nav-label  {
    display: none; /*Removal of Menu checkbox on larger screens*/
    }

    #cover-text h1 {
        font-size: 3rem;
    }

    #cover-text h2  {
        font-size: 2rem;
    }
    
    /* About Webpage */
    #cover-text-a {
        font-size: 2.7rem;
    }

    .m-summary {
        display: flex;
        flex-wrap: wrap;
    }

    #m-techniques img {
        width: 50vw;
        border: 5px inset #FACF5A;
        padding: 20px;
        margin-top: 10px;
    }

    #m-techniques .m-explanation  {
        width: 50vw;
        padding: 10px 0 0 2vw;
    }

    div .m-summary  {
        width: 100vw;
    }
    /* Services Webpage */
    #cover-text-b {
        font-size: 2.7rem;
    }
    
    #guidance, #creativity, #training  {
        display: flex;
        flex-wrap: wrap;
    }

    #guidance div, #creativity div,
        #training div {
        width: 50%;
        flex-wrap: wrap;
    }

    #services img  {
        width: 50vw;  /* vw instead of percent as it does adapt to the screen */
        border: 5px inset #FACF5A;
        padding: 20px;
        margin-top: 10px; /* in place of margin to keep frame effect */
    }

    .explanation-box  {
        padding: 10px 0 0 2vw;
    }
}

/* Media Query for laptop or larger devices */

@media screen and (min-width: 992px) {
    /* General Changes */
    #menu a:hover  {
        color: #FF5956;
    }
}

